...
object HikeDetailScreen {
  const val MAP_MAX_ZOOM = 18.0
  const val MAP_MAX_LONGITUDE = 180.0
  const val MAP_MIN_LONGITUDE = -180.0
  const val MAP_BOUNDS_MARGIN: Int = 100

  const val TEST_TAG_MAP = "HikeDetailScreenMap"
  const val TEST_TAG_HIKE_NAME = "HikeDetailScreenHikeName"
  const val TEST_TAG_BOOKMARK_ICON = "HikeDetailScreenBookmarkIcon"
  const val TEST_TAG_ELEVATION_GRAPH = "HikeDetailScreenElevationGraph"
  const val TEST_TAG_DETAIL_ROW_TAG = "HikeDetailScreenDetailRowTag"
  const val TEST_TAG_DETAIL_ROW_VALUE = "HikeDetailScreenDetailRowValue"
  const val TEST_TAG_ADD_DATE_BUTTON = "HikeDetailScreenAddDateButton"
  const val TEST_TAG_PLANNED_DATE_TEXT_BOX = "HikeDetailScreenPlannedDateTextBox"
  const val TEST_TAG_DATE_PICKER = "HikeDetailDatePicker"
...
