...
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.unit.dp
import ch.hikemate.app.R

object ZoomMapButton {
  const val ZOOM_MAP_BUTTON = "ZoomMapButton"
  const val ZOOM_IN_BUTTON = "ZoomInButton"
  const val ZOOM_OUT_BUTTON = "ZoomOutButton"
  val ZOOM_BUTTON_WIDTH_SIZE = 52.dp
}

/**
 * Buttons that zoom in and out of the map.
 *
...
